[zetasql-toolkit] Implement output schema inference for BigQuery table functions